force-app/main/default/objects/Client_Acceptance_Form__c/fields/Anything_unusual_or_suspicious_on_client__c.field-meta.xml
<CustomField>
    <fullName>Anything_unusual_or_suspicious_on_client__c</fullName>
    <inlineHelpText>Is there anything unusual or suspicious about the client or transaction</inlineHelpText>
    <label>Anything unusual or suspicious on client</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>