force-app/main/default/objects/Client_Acceptance_Form__c/fields/Are_there_any_other_relationships_Text__c.field-meta.xml
<CustomField>
    <fullName>Are_there_any_other_relationships_Text__c</fullName>
    <label>Are there any other relationships Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>