force-app/main/default/objects/Client_Acceptance_Form__c/fields/Confirm_that_we_have_ascertained_the_tax__c.field-meta.xml
<CustomField>
    <fullName>Confirm_that_we_have_ascertained_the_tax__c</fullName>
    <label>Confirm that we have ascertained the tax</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>