force-app/main/default/objects/Client_Acceptance_Form__c/fields/CP_team_member_relationship_with_any_par__c.field-meta.xml
<CustomField>
    <fullName>CP_team_member_relationship_with_any_par__c</fullName>
    <inlineHelpText>Has any CP team member a family relationship or other close involvement
with any party ?</inlineHelpText>
    <label>CP team member relationship with any par</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>