force-app/main/default/objects/Client_Acceptance_Form__c/fields/Current_Adviser_Response__c.field-meta.xml
<CustomField>
    <fullName>Current_Adviser_Response__c</fullName>
    <label>Current Adviser Response</label>
    <type>TextArea</type>
</CustomField>