force-app/main/default/objects/Client_Acceptance_Form__c/fields/Demonstrate_our_competence_to_perform__c.field-meta.xml
<CustomField>
    <fullName>Demonstrate_our_competence_to_perform__c</fullName>
    <inlineHelpText>Can we demonstrate our competence to perform the proposed work ?</inlineHelpText>
    <label>Demonstrate our competence to perform</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>