force-app/main/default/objects/Client_Acceptance_Form__c/fields/Do_we_have_any_concerns_Exp2__c.field-meta.xml
<CustomField>
    <fullName>Do_we_have_any_concerns_Exp2__c</fullName>
    <label>Do we have any concerns (Exp2)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>