force-app/main/default/objects/Client_Acceptance_Form__c/fields/Fees_agreed_with_client_Pick__c.field-meta.xml
<CustomField>
    <fullName>Fees_agreed_with_client_Pick__c</fullName>
    <label>Fees agreed with client</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>