force-app/main/default/objects/Client_Acceptance_Form__c/fields/Full_Name3__c.field-meta.xml
<CustomField>
    <fullName>Full_Name3__c</fullName>
    <label>Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>