force-app/main/default/objects/Client_Acceptance_Form__c/fields/Have_you_made_enquiry_s_as_to_the_source__c.field-meta.xml
<CustomField>
    <fullName>Have_you_made_enquiry_s_as_to_the_source__c</fullName>
    <label>Have you made enquiry’s as to the source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>