force-app/main/default/objects/Client_Acceptance_Form__c/fields/Have_you_reviewed_all_annual_returns__c.field-meta.xml
<CustomField>
    <fullName>Have_you_reviewed_all_annual_returns__c</fullName>
    <label>Have you reviewed all annual returns</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>