force-app/main/default/objects/Client_Acceptance_Form__c/fields/List_all_services_included_in_this_onboa__c.field-meta.xml
<CustomField>
    <fullName>List_all_services_included_in_this_onboa__c</fullName>
    <label>List all services included in this onboa</label>
    <type>TextArea</type>
</CustomField>