force-app/main/default/objects/Client_Acceptance_Form__c/fields/Please_give_details_of_individuals_we__c.field-meta.xml
<CustomField>
    <fullName>Please_give_details_of_individuals_we__c</fullName>
    <label>Please give details  of individuals we</label>
    <type>TextArea</type>
</CustomField>