force-app/main/default/objects/Client_Acceptance_Form__c/fields/Please_state_which_team_member_has_met__c.field-meta.xml
<CustomField>
    <fullName>Please_state_which_team_member_has_met__c</fullName>
    <label>Please state which  team member has  met</label>
    <type>TextArea</type>
</CustomField>