force-app/main/default/objects/Client_Acceptance_Form__c/fields/Reason_for_Change_and_Intro_to_CP__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Change_and_Intro_to_CP__c</fullName>
    <label>Reason for Change and Intro to CP?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>