force-app/main/default/objects/Client_Acceptance_Form__c/fields/regpick20__c.field-meta.xml
<CustomField>
    <fullName>regpick20__c</fullName>
    <label>Have you reviewed a copy of the accounts</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>