force-app/main/default/objects/Client_Acceptance_Form__c/fields/Safeguards_Applied__c.field-meta.xml
<CustomField>
    <fullName>Safeguards_Applied__c</fullName>
    <label>Safeguards Applied</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Audit and Tax</fullName>
            </value>
            <value>
                <fullName>Accounts and Audit Work</fullName>
            </value>
            <value>
                <fullName>NFP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>